<resources>
    <string name="facebook_app_id" translatable="false">576559802747671</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb576559802747671</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="app_name">Cicerone</string>
    <string name="error">errore</string>
    <string name="generic_error">Si è verificato un errore.</string>
    <string name="city">città</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="emailTextFieldHint">Email</string>
    <string name="emailTextFieldError">Email non valida!</string>
    <string name="passwordTextFieldHint">Password</string>
    <string name="passwordTextFieldError">Password troppo corta!</string>
    <string name="loginButtonText">Login</string>
    <string name="loginText1">Non hai un account?</string>
    <string name="loginText2">Registrati</string>
    <string name="loginText3">Oppure</string>
    <string name="signInGoogle">Accedi con Google</string>
    <string name="signInFacebook">Accedi con Facebook</string>
    <string name="loginDialogText1">Account non trovato!</string>
    <string name="loginDialogText2">Controlla i dati inseriti e riprova.</string>
    <string name="name">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="Numero_di_telefono">Numero di telefono</string>
    <string name="registrationDialogErrorText1">Impossibile registrarsi!</string>
    <string name="registrationDialogErrorText2">Controlla i dati inseriti e riprova.</string>
    <string name="registrationDialogErrorText3">Email già registrata</string>
    <string name="registrationDialogSuccessText1">Registrazione effettuata!</string>
    <string name="registrationDialogSuccessText2">Controllare la casella di posta per confermare la registrazione</string>
    <string name="emailError">Campo non valido</string>
    <string name="pswLenghtError">Password troppo corta</string>
    <string name="pswConfError">Password differenti</string>
    <string name="nameError">Nome non valido</string>
    <string name="surnameError">Cognome non valido</string>
    <string name="dateError">Il campo è obbligatorio</string>
    <string name="phoneError">Numero telefonico non valido</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Impostazioni</string>
    <string name="ItinerayEditActivity_Title">Modifica itinerario</string>
    <string name="max_char">Superato numero massimo caratteri</string>
    <string name="insert_shorter_desc">Inserisci una descrizione più corta</string>
    <string name="no_desc">Descrizione obligatoria</string>
    <string name="no_place_name">Nome tappa obligatoria</string>
    <string name="error_dialog_title">Nome tappa già esistente</string>
    <string name="error_dialog_content">"È impossibile inserire due tappe uguali</string>
    <string name="error_dialog_confirmText">OK</string>
    <string name="succes_edit_toast">Itinerario modificato</string>
    <string name="failure_edit_toast">Errore nel caricamento dell\'itinerario&lt;br /&gt;Riprova</string>
    <string name="connection_error">Problema di connessione col server</string>
    <string name="no_places">Deve essere presente almeno una tappa</string>
    <string name="no_empty_field">Il campo non può essere vuoto</string>
    <string name="incorrect_date">Inserisci una data corretta, diversa dal giorno corrente</string>
    <string name="ItinerayActivity_Title">Nuovo itinerario</string>
    <string name="succes_create_itinerary_toast">Itinerario creato</string>
    <string name="menu_home">Home</string>
    <string name="menu_itineraries_list">I tuoi itinerari</string>
    <string name="menu_trips_list">I tuoi viaggi</string>
    <string name="menu_profile">Profilo</string>
    <string name="noItineraries">Non ci sono itinerari.</string>
    <string name="noTrips">Non ci sono viaggi.</string>
    <string name="edit">Modifica</string>
    <string name="delete">Elimina</string>
    <string name="deleteDialogTitle">Elimina itinerario</string>
    <string name="deleteDialogMessage">Sei sicuro di voler eliminare l\'itinerario selezionato?</string>
    <string name="deletedItineraryMessage">Itinerario eliminato con successo.</string>
    <string name="title_activity_itinerary" translatable="false">activity_itinerary</string>
    <string name="place_KEY" translatable="false">AIzaSyCoYirGU9t1T1lyAmy_0CsJeH7ikMTZYng</string>
    <string name="title_activity_itinerary_edit" translatable="false">ItineraryEditActivity</string>
    <string name="time_picker">Scegli l\'ora</string>
    <string name="title_activity_show_place">Map</string>
    <string name="fields_not_inserted" translatable="false">Non hai inserito tutti i campi.</string>
    <string name="newTripLabel1">Dove sara\' il tuo prossimo viaggio?</string>
    <string name="newTripLabel2">…e quando?</string>
    <string name="newTripField1">Cerca luogo…</string>
    <string name="newTripField2">Inserisci data</string>
    <string name="search">Cerca</string>
    <string name="searchResultsTitle1">Risultati trovati per</string>
    <string name="searchResultsTitle2">il</string>
    <string name="noSearchResults">Non è stato trovato nessun itinerario.</string>
    <string name="title_ParticipantsActivity">Partecipanti</string>
    <string name="title_activity_participants" translatable="false">ParticipantsActivity</string>
    <string name="title_activity_proposed_stage" translatable="false">ProposedStageActivity</string>
    <string name="title_ProposedStageActivity">Tappe proposte</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>
    <string name="title_activity_test_profile" translatable="false">TestProfile</string>
    <string name="homeLabel1">Ti piace viaggiare?\nCerca un itinerario e comincia a esplorare il mondo.</string>
    <string name="homeLabel2">Conosci molto bene la tua città?\nProponi un itinerario e condividi la tua conoscenza con il resto del mondo!</string>
    <string name="homeButton1">Cerca un itinerario</string>
    <string name="homeButton2">Proponi un itinerario</string>
</resources>