<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity" >

    <HorizontalScrollView
        android:id="@+id/imageScroller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.cunoraz.continuouscrollable.ContinuousScrollableImageView
            android:id="@+id/loginBackgroundImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:direction="left"
            app:scaleType="centerCrop"
            app:duration="120000"
            android:foreground="@drawable/login_activity_background"
            app:imageSrc="@drawable/login_background_image"/>

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/controlsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bannerLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            app:srcCompat="@drawable/ic_cicerone_banner_white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/emailTextField"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:drawableLeft="@drawable/ic_identity"
                    android:drawablePadding="10sp"
                    android:ems="10"
                    android:hint="@string/emailTextFieldHint"
                    android:inputType="textEmailAddress"
                    android:textColor="#fff"
                    android:textColorHint="#77ffffff" />

                <EditText
                    android:id="@+id/passwordTextField"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="10sp"
                    android:ems="10"
                    android:hint="@string/passwordTextFieldHint"
                    android:inputType="textPassword"
                    android:textColor="#fff"
                    android:textColorHint="#77ffffff" />

                <com.manojbhadane.QButton
                    android:id="@+id/loginButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:text="@string/loginButtonText"
                    android:textColor="@android:color/white"
                    app:qb_backgroundColor="@color/colorPrimaryDark"
                    app:qb_radius="100"
                    app:qb_strokeColor="@color/colorAccent"
                    app:qb_strokeWidth="2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/loginText1"
                        android:textAlignment="center"
                        android:textColor="#fff" />

                    <TextView
                        android:id="@+id/registerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/loginText2"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_margin="20dp">

                    <View
                        android:id="@+id/divider"
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorAccent" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/loginText3"
                        android:textAllCaps="true"
                        android:textColor="#fff" />

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:background="@color/colorAccent" />
                </LinearLayout>

                <com.shaishavgandhi.loginbuttons.GoogleButton
                    android:id="@+id/googleSignInButton"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:text="@string/signInGoogle"
                    android:textAlignment="center"
                    android:textColor="#777"
                    app:iconSize="30dp" />

                <com.shaishavgandhi.loginbuttons.FacebookButton
                    android:id="@+id/facebookSignInButton"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/signInFacebook"
                    android:textAlignment="center"
                    app:iconSize="30dp"/>


            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

</RelativeLayout>