<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Fragment_register1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/emailTextField"
            android:layout_width="0dp"
            android:layout_height="35sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:background="@color/black_overlay"
            android:backgroundTintMode="add"
            android:drawableLeft="@drawable/ic_identity"
            android:drawablePadding="10sp"
            android:ems="10"
            android:hint="@string/emailTextFieldHint"
            android:inputType="textEmailAddress"
            android:textColor="#fff"
            android:textColorHint="#FFFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/passwordTextField"
            android:layout_width="0dp"
            android:layout_height="35sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@color/black_overlay"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10sp"
            android:ems="10"
            android:hint="@string/passwordTextFieldHint"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:textColorHint="#ffffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextField" />

        <EditText
            android:id="@+id/confirmTextField"
            android:layout_width="0dp"
            android:layout_height="35sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@color/black_overlay"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10sp"
            android:ems="10"
            android:hint="@string/conferma_password"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:textColorHint="#ffffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:padding="7.5dp"
            android:src="@drawable/ic_full_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmTextField" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_next_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:onClick="switchRegisterFragment"
            android:rotation="-90"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmTextField"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/arrow" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>